# agent-builder

./: .gitignore  README.md  docker-compose.yml  langgraph.json  main.py  pyproject.toml
agent/: graph.py  model.py  tools.py
api/: app.py  db.py
api/routes/: guardrails.py  lexical_rag.py  local_rag.py  mcp.py  models.py  rag.py  storage.py  voice.py
api/utils/: doc_loader.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/.github/workflows/: ci.yml
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/(dashboard)/: layout.tsx
frontend/src/app/(dashboard)/agents/: page.tsx
frontend/src/app/(dashboard)/chat/: page.tsx
frontend/src/app/(dashboard)/models/: page.tsx
frontend/src/app/(dashboard)/rag/: page.tsx
frontend/src/app/(dashboard)/security/: page.tsx
frontend/src/app/(dashboard)/settings/: page.tsx
frontend/src/app/(dashboard)/storage/: page.tsx
frontend/src/app/(dashboard)/voice/: page.tsx
frontend/src/components/: runtime-splash.tsx
frontend/src/components/agent-builder/: index.tsx  step-basics.tsx  step-mcp-servers.tsx  step-prebuilt-tools.tsx  step-review.tsx
frontend/src/components/dashboard/: agent-selector.tsx  layout.tsx  session-chooser.tsx  sidebar.tsx
frontend/src/components/icons/: grid-agents.tsx
frontend/src/components/thread/: index.tsx
frontend/src/components/thread/history/: index.tsx
frontend/src/components/thread/messages/: ai.tsx  (+1 more)
frontend/src/components/voice/: voice-session.tsx
frontend/src/lib/: guardrails.ts
frontend/src/providers/: AgentConfig.tsx  Stream.tsx  Thread.tsx
(+2 files in other folders)
