[project]
name = "novagrid-agents"
version = "1.0.0"
description = "NovaGrid Agents - Nova-native enterprise agent workspace on AWS"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "langchain-openai>=1.1.10",
    "langchain-tavily>=0.2.17",
    "langchain-community>=0.3.0",
    "langgraph>=0.4.0",
    "langgraph-cli[inmem]>=0.4.0",
    "langgraph-prebuilt>=1.0.0",
    "langchain-mcp-adapters>=0.1.0",
    "mcp[cli]>=1.26.0",
    "openai>=2.24.0",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn>=0.41.0",
    "fastapi>=0.115.0",
    "duckduckgo-search>=7.0.0",
    "wikipedia>=1.4.0",
    "faiss-cpu>=1.9.0",
    "langchain-text-splitters>=0.3.0",
    "sentence-transformers>=3.0.0",
    "pypdf>=5.0.0",
    "docx2txt>=0.8",
    "arxiv>=2.1.0",
    "xmltodict>=0.14.0",
    "youtube_search>=2.1.0",
    "wolframalpha>=5.1.0",
    "pyowm>=3.3.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "O365>=2.0.0",
    "pygithub>=2.0.0",
    "atlassian-python-api>=3.0.0",
    "e2b-code-interpreter>=1.0.0",
    "playwright>=1.40.0",
    "google-search-results>=2.4.0",
    "semanticscholar>=0.8.0",
    "meilisearch>=0.38.0",
    "meilisearch-mcp>=0.6.0",
    "langchain-aws>=1.4.0",
    "boto3>=1.38.0",
    "nova-act>=0.1.0",
]
